@@ -1,0 +1,1 @@
+openstackdocstheme/theme usr/lib/python2.7/dist-packages/openstackdocstheme
