@@ -1,0 +1,2 @@
+usr/share/javascript/bootstrap/js/bootstrap.min.js usr/lib/python2.7/dist-packages/openstackdocstheme/theme/openstackdocs/static/js/bootstrap.min.js
+usr/share/javascript/bootstrap/css/bootstrap.min.css usr/lib/python2.7/dist-packages/openstackdocstheme/theme/openstackdocs/static/css/bootstrap.min.css
