@@ -1,0 +1,1 @@
+openstackdocstheme/theme usr/lib/python3/dist-packages/openstackdocstheme
