@@ -13,6 +13,7 @@ python-openstackdocstheme (1.3.0+dfsg1-1) UNRELEASED; urgency=medium
   * Don't override dh_auto_clean
   * Added libjs-bootstrap and libjs-jquery to dependencies
   * Symlink Bootstrap and jQuery JS libs during build
+  * Use *.install and *.links inside of calling cp/ln in d/rules
 
  -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 15:42:41 +0100
 
